<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_about_us"
        android:name="com.example.societyorad.ui.about_us.About_UsFragment"
        android:label="@string/menu_about_us"
        tools:layout="@layout/fragment_about__us" />
    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.societyorad.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_donate"
        android:name="com.example.societyorad.ui.donate.DonateFragment"
        android:label="@string/menu_donate"
        tools:layout="@layout/fragment_donate" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.societyorad.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_volunteers"
        android:name="com.example.societyorad.ui.volunteers.VolunteersFragment"
        android:label="@string/menu_volunteers"
        tools:layout="@layout/fragment_volunteers" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.societyorad.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.societyorad.ui.signout.SignoutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />
</navigation>